--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <html>
 <head>
-<script type="text/javascript">
-    (function(p,u,s,h){
-        p._pcq=p._pcq||[];
-        p._pcq.push(['_currentTime',Date.now()]);
-        s=u.createElement('script');
-        s.type='text/javascript';
-        s.async=true;
-        s.src='https://cdn.pushcrewstaging.com/js/56316b63be4b5eba6b6dc1bf1d265073.js';
-        h=u.getElementsByTagName('script')[0];
-        h.parentNode.insertBefore(s,h);
-    })(window,document);
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  var OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "4c9051be-81c2-4424-993f-83c1e963b542",
+    });
+  });
 </script>
 </head>
 <body>
-    <h1>Welcome - sakshi.nagpal+freeold@wingify.com</h1>
+    <h1>One signal</h1>
 </body>
 </html>
